tests/snapshots/ptx_golden_partition_snapshots__partition_reduce_minmax_i64_min_i32_spill.snap
---
source: tests/ptx_golden_partition_snapshots.rs
expression: normalize_ptx(&ptx)
---
.version 7.5
.target sm_70
.address_size 64

.shared .align 8 .b8 block_keys_buf_sp[8192];
.shared .align 4 .b8 block_vals_buf_sp[4096];
.shared .align 4 .b8 block_set_buf_sp[4096];

.visible .entry bolt_partition_reduce_min_i32_keyi64_spill(
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_0,
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_1,
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_2,
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_3,
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_4,
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_5,
	.param .u64 bolt_partition_reduce_min_i32_keyi64_spill_param_6
)
{
	.reg .pred  %p<16>;
	.reg .b32   %r<64>;
	.reg .b64   %rd<96>;

	mov.u32 %r{0}, %ctaid.x;
	mov.u32 %r{1}, %ntid.x;
	mov.u32 %r{2}, %tid.x;
	mov.u64 %rd{0}, block_keys_buf_sp;
	mov.u64 %rd{1}, block_vals_buf_sp;
	mov.u64 %rd{2}, block_set_buf_sp;
	ld.param.u64 %rd{3}, [bolt_partition_reduce_min_i32_keyi64_spill_param_0];
	cvta.to.global.u64 %rd{3}, %rd{3};
	ld.param.u64 %rd{4}, [bolt_partition_reduce_min_i32_keyi64_spill_param_1];
	cvta.to.global.u64 %rd{4}, %rd{4};
	ld.param.u64 %rd{5}, [bolt_partition_reduce_min_i32_keyi64_spill_param_2];
	cvta.to.global.u64 %rd{5}, %rd{5};
	ld.param.u64 %rd{6}, [bolt_partition_reduce_min_i32_keyi64_spill_param_3];
	cvta.to.global.u64 %rd{6}, %rd{6};
	ld.param.u64 %rd{7}, [bolt_partition_reduce_min_i32_keyi64_spill_param_4];
	cvta.to.global.u64 %rd{7}, %rd{7};
	ld.param.u64 %rd{8}, [bolt_partition_reduce_min_i32_keyi64_spill_param_5];
	cvta.to.global.u64 %rd{8}, %rd{8};
	ld.param.u64 %rd{9}, [bolt_partition_reduce_min_i32_keyi64_spill_param_6];
	cvta.to.global.u64 %rd{9}, %rd{9};

	mul.wide.u32 %rd{10}, %r{0}, 4;
	add.s64 %rd{11}, %rd{5}, %rd{10};
	ld.global.u32 %r{3}, [%rd{11}];
	add.s64 %rd{12}, %rd{11}, 4;
	ld.global.u32 %r{4}, [%rd{12}];

	mov.u32 %r{5}, %r{2};
ZERO_TOP:
	setp.ge.u32 %p{0}, %r{5}, 1024;
	@%p{0} bra ZERO_DONE;
	mul.wide.u32 %rd{13}, %r{5}, 8;
	add.s64 %rd{14}, %rd{0}, %rd{13};
	st.shared.u64 [%rd{14}], 0;
	mul.wide.u32 %rd{15}, %r{5}, 4;
	add.s64 %rd{16}, %rd{1}, %rd{15};
	st.shared.u32 [%rd{16}], 0x7FFFFFFF;
	mul.wide.u32 %rd{17}, %r{5}, 4;
	add.s64 %rd{18}, %rd{2}, %rd{17};
	st.shared.u32 [%rd{18}], 0;
	add.u32 %r{5}, %r{5}, 256;
	bra ZERO_TOP;
ZERO_DONE:
	bar.sync 0;

	add.u32 %r{6}, %r{3}, %r{2};
LOOP_TOP:
	setp.ge.u32 %p{1}, %r{6}, %r{4};
	@%p{1} bra LOOP_DONE;
	mul.wide.u32 %rd{19}, %r{6}, 8;
	add.s64 %rd{20}, %rd{3}, %rd{19};
	ld.global.s64 %rd{21}, [%rd{20}];
	mul.wide.u32 %rd{22}, %r{6}, 4;
	add.s64 %rd{23}, %rd{4}, %rd{22};
	ld.global.s32 %r{7}, [%rd{23}];
	cvt.u32.u64 %r{8}, %rd{21};
	and.b32 %r{9}, %r{8}, 0x3FF;
	mov.u32 %r{10}, 0;
PROBE_TOP:
	add.u32 %r{10}, %r{10}, 1;
	setp.gt.u32 %p{2}, %r{10}, 1024;
	@%p{2} bra SPILL_BUMP;
	mul.wide.u32 %rd{24}, %r{9}, 4;
	add.s64 %rd{25}, %rd{2}, %rd{24};
	mul.wide.u32 %rd{26}, %r{9}, 8;
	add.s64 %rd{27}, %rd{0}, %rd{26};
	mul.wide.u32 %rd{28}, %r{9}, 4;
	add.s64 %rd{29}, %rd{1}, %rd{28};
	atom.shared.cas.b32 %r{11}, [%rd{25}], 0, 1;
	setp.eq.s32 %p{3}, %r{11}, 0;
	@%p{3} bra CLAIM;
PUBLISH_WAIT:
	ld.volatile.shared.u32 %r{12}, [%rd{25}];
	setp.eq.u32 %p{4}, %r{12}, 2;
	@%p{4} bra PUBLISH_DONE;
	mov.u32 %r{12}, 32;
	nanosleep.u32 %r{12};
	bra PUBLISH_WAIT;
PUBLISH_DONE:
	membar.cta;
	ld.shared.s64 %rd{30}, [%rd{27}];
	setp.eq.s64 %p{5}, %rd{30}, %rd{21};
	@%p{5} bra MATCH;
	add.u32 %r{9}, %r{9}, 1;
	and.b32 %r{9}, %r{9}, 0x3FF;
	bra PROBE_TOP;
CLAIM:
	st.shared.u64 [%rd{27}], %rd{21};
	membar.cta;
	st.shared.u32 [%rd{25}], 2;
	atom.shared.min.s32 %r{13}, [%rd{29}], %r{7};
	bra LOOP_NEXT;
MATCH:
	atom.shared.min.s32 %r{14}, [%rd{29}], %r{7};
	bra LOOP_NEXT;
SPILL_BUMP:
	setp.eq.u64 %p{6}, %rd{9}, 0;
	@%p{6} bra LOOP_NEXT;
	atom.global.add.u32 %r{12}, [%rd{9}], 1;
LOOP_NEXT:
	add.u32 %r{6}, %r{6}, %r{1};
	bra LOOP_TOP;
LOOP_DONE:
	bar.sync 0;

	mul.lo.u32 %r{15}, %r{0}, 1024;
	mov.u32 %r{16}, %r{2};
EXPORT_TOP:
	setp.ge.u32 %p{7}, %r{16}, 1024;
	@%p{7} bra EXPORT_DONE;
	add.u32 %r{17}, %r{15}, %r{16};
	mul.wide.u32 %rd{31}, %r{16}, 8;
	add.s64 %rd{32}, %rd{0}, %rd{31};
	ld.shared.s64 %rd{33}, [%rd{32}];
	mul.wide.u32 %rd{34}, %r{16}, 4;
	add.s64 %rd{35}, %rd{1}, %rd{34};
	ld.shared.s32 %r{18}, [%rd{35}];
	mul.wide.u32 %rd{36}, %r{16}, 4;
	add.s64 %rd{37}, %rd{2}, %rd{36};
	ld.shared.u32 %r{19}, [%rd{37}];
	setp.ne.s32 %p{4}, %r{19}, 0;
	selp.u32 %r{20}, 1, 0, %p{4};
	mul.wide.u32 %rd{38}, %r{17}, 8;
	add.s64 %rd{39}, %rd{6}, %rd{38};
	st.global.s64 [%rd{39}], %rd{33};
	mul.wide.u32 %rd{40}, %r{17}, 4;
	add.s64 %rd{41}, %rd{7}, %rd{40};
	st.global.s32 [%rd{41}], %r{18};
	cvt.u64.u32 %rd{42}, %r{17};
	add.s64 %rd{43}, %rd{8}, %rd{42};
	st.global.u8 [%rd{43}], %r{20};
	add.u32 %r{16}, %r{16}, 256;
	bra EXPORT_TOP;
EXPORT_DONE:
	ret;
}
